@@ -85,7 +85,7 @@ void gui_note_can_close(GSHTMLEditorControlData *ecd)
 	if (settings.modifiedPC) {
 		str = g_string_new("");
 		info = gui_new_dialog();
-		info->stock_icon = "gtk-dialog-warning";
+		info->stock_icon = GTK_STOCK_DIALOG_WARNING;
 		g_string_printf(str,
 			"<span weight=\"bold\">%s</span>\n\n%s %s",
 			_("Note for"),
